--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 repository: softwareengel/Obsidian
+baseurl:  "/Obsidian"
 title: HackerNotes
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+twitter_username: softwareengel
+github_username: softwareengel
 minimal_mistakes_skin: default
 search: true
 
