--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ repository: softwareengel/Obsidian
 baseurl:  "/Obsidian"
 title: HackerNotes
 email:
+# 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -63,7 +64,8 @@ plugins:
 author:
   name   : "Pro Engels"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  # bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "HackerNotes is a collection of notes, thoughts, and ideas on software engineering, programming, and technology."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
