--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,17 @@
 repository: softwareengel/Obsidian
 baseurl:  "/Obsidian"
 title: HackerNotes
-email:
+email: 
 # 
+#description: >- # this means to ignore newlines until "baseurl:"
+#  Write an awesome description for your new site here. You can edit this
+#  line in _config.yml. It will appear in your document head meta (for
+#  Google search results) and in your feed.xml site description.
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Explore HackerNotes for insightful collections of notes, thoughts, and 
+  ideas on software engineering, programming, and the latest in technology. 
+  Dive into expert knowledge and innovative solutions to enhance your coding 
+  skills and tech understanding.
 twitter_username: softwareengel
 github_username: softwareengel
 minimal_mistakes_skin: default
